--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@
    </div>
   </header>
   <!-- Герой -->
-  <section data-aos="fade-up" id="hero" style=" margin: 0 auto; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+  <section data-aos="fade-up" id="hero" style=" margin: 0 auto; display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 60px 20px; gap: 20px;">
    <h1 data-lang="ru">
     Добро пожаловать в DynSteaking
    </h1>
@@ -892,10 +892,10 @@
    <p data-lang="en" style="display: none;">
     Honesty, openness, kindness, and substantial daily income are the keys to our success.
    </p>
-   <a class="button-link cta-button" data-lang="ru" href="#market-embed">
+   <a class="button-link cta-button" data-lang="ru" href="#market-embed" style=" margin-top: 10px; display: inline-block; text-align: center;">
     Узнать больше
    </a>
-   <a class="button-link cta-button" data-lang="en" href="#market-embed" style="display: none;">
+   <a class="button-link cta-button" data-lang="en" href="#market-embed" style="display: none; margin-top: 10px; display: inline-block; text-align: center;">
     Learn More
    </a>
   </section>
