--- a/index.html
+++ b/index.html
@@ -193,12 +193,12 @@
             max-width: 800px; /* Ограничение ширины для лучшего центрирования */
             transition: padding var(--transition-speed);
             scroll-margin-top: calc(var(--header-height) + 20px); /* Предотвращает перекрытие при якорных ссылках */
-            display: flex;
+            /* Удалены свойства flexbox, чтобы избежать ограничения высоты */
+            /* display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            gap: 20px;
-            /* Удален margin-top: 7%; */
+            gap: 20px; */
         }
         
         #hero h1 {
